{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 155,
  "lineage": "479a587f-7c59-564d-1fb2-3f469bcec7b8",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "api",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-07-12T06:50:04.010-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "api-firewall",
            "name": "api-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformserver/global/networks/default",
            "priority": 1000,
            "project": "terraformserver",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformserver/global/firewalls/api-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "api"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mongo",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-07-12T06:50:04.179-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "mongo-firewall",
            "name": "mongo-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/terraformserver/global/networks/default",
            "priority": 1000,
            "project": "terraformserver",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformserver/global/firewalls/mongo-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "mongo"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "api",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20190628",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/terraformserver/zones/europe-west2-c/disks/api"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "id": "api",
            "instance_id": "4563484637758041826",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "sshKeys": "terraform:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDlMsYMf3QaJfco18LW5OCDwGj0kBUwrG9Kf1hiPJ9qySeZuCHT7gC1tX261Tbddy8cYCJUKRIaEYLUk9UsZc4CwoOSZ69mcEZ1Z5AcflDM6NrCADoWjKKPf+MgnYS35krEL7WV1oHfj4rQo8RyfD8b9bmjI6dM7xTz/KTgrKpjLj0ZwrOQBKNMhooWC8r8++aS7tTUHo58P4ynOezwEwwPDNglnLMWE5Vk64C94Ivdzko143NUfgBLb02M5jGa+cgm7jVnmNEl1om3G2J9jKi7qcazwXQAyf01zUrmEkFAGGGuuAKil9RnwF4CB+YYsBo1YjYPWkfFwBxJChxD+UTR sulayman@sulayman-VirtualBox\n"
            },
            "metadata_fingerprint": "fPQ-7IXslAs=",
            "name": "api",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.197.201.118",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraformserver/global/networks/default",
                "network_ip": "10.154.0.29",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraformserver/regions/europe-west2/subnetworks/default",
                "subnetwork_project": "terraformserver"
              }
            ],
            "project": "terraformserver",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformserver/zones/europe-west2-c/instances/api",
            "tags": [
              "api"
            ],
            "tags_fingerprint": "qKYq7cjBR-k=",
            "zone": "europe-west2-c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mongo",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20190628",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/terraformserver/zones/europe-west2-c/disks/mongo"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "id": "mongo",
            "instance_id": "6086360735318092570",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "sshKeys": "terraform:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDlMsYMf3QaJfco18LW5OCDwGj0kBUwrG9Kf1hiPJ9qySeZuCHT7gC1tX261Tbddy8cYCJUKRIaEYLUk9UsZc4CwoOSZ69mcEZ1Z5AcflDM6NrCADoWjKKPf+MgnYS35krEL7WV1oHfj4rQo8RyfD8b9bmjI6dM7xTz/KTgrKpjLj0ZwrOQBKNMhooWC8r8++aS7tTUHo58P4ynOezwEwwPDNglnLMWE5Vk64C94Ivdzko143NUfgBLb02M5jGa+cgm7jVnmNEl1om3G2J9jKi7qcazwXQAyf01zUrmEkFAGGGuuAKil9RnwF4CB+YYsBo1YjYPWkfFwBxJChxD+UTR sulayman@sulayman-VirtualBox\n"
            },
            "metadata_fingerprint": "fPQ-7IXslAs=",
            "name": "mongo",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.246.85.162",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraformserver/global/networks/default",
                "network_ip": "10.154.0.32",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraformserver/regions/europe-west2/subnetworks/default",
                "subnetwork_project": "terraformserver"
              }
            ],
            "project": "terraformserver",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraformserver/zones/europe-west2-c/instances/mongo",
            "tags": [
              "mongo"
            ],
            "tags_fingerprint": "ALcqbuiVo9A=",
            "zone": "europe-west2-c"
          }
        }
      ]
    }
  ]
}